# FRDMKL46Z_meson_template

./: Makefile  README.md  cross-compilation.toml  meson.build  readme.md
lib/: meson.build
lib/config/: pin_mux.c
lib/frdmkl46z/: meson.build
lib/freertos/include/: FreeRTOSConfig.h
src/: freertos_hello_world.c  main.c  meson.build
src/config/: meson.build
